Unified: Implement HideBubble to support shortcut

TrayBubbleView tries to close the bubble when shortcut such as
Power-VolumeDown is pressed. It lets the shortcut to be forwarded to
Shell properly. The method was implemented for SystemTray but not for
UnifiedSystemTray. As a result, Power-VolumeDown shortcut in tablet
mode didn't work when UnifiedSystemTray was opened.

TEST=manual(tablet mode)
BUG=884102

Change-Id: I945debbc356e7f3d54931b250929141d28747cb0
Reviewed-on: https://chromium-review.googlesource.com/1242574
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594231}
Former-commit-id: 58637be888519641f01e2499b1a6fec03da07883